--- a/Yoga/Common/View/Base_printreceiptsnew.html
+++ b/Yoga/Common/View/Base_printreceiptsnew.html
@@ -31,7 +31,7 @@
     </style>
 
     <script type="text/javascript">
-       // window.print(); 
+        window.print(); 
     </script>
 </head>
 <body>
