--- a/Yoga/Bar/View/Goods_index.html
+++ b/Yoga/Bar/View/Goods_index.html
@@ -205,8 +205,10 @@
 
 <block name="script">
   <script> 
-  var goodstypesarr = eval("(" + '{$goodstypesarr}' + ")");
-
+var gta='{$goodstypesarr}';
+  gta = gta.replace(new RegExp("\n","gm"),""); 
+gta = gta.replace(new RegExp("\r","gm"),"");
+  var goodstypesarr = eval("(" + gta + ")");
 function tip()
 {
     var use_recharge=$("#use_recharge").prop("checked");
@@ -253,10 +255,11 @@ function tip()
         arr.push(obj);
       }
       var goods=$.toJSON( arr );
-      $.post('/Bar/Goods/buy',{use_recharge:use_recharge,cash:cash,netbank:netbank,network:network,pos:pos,check:check,check_num:check_num,description:description,goods:goods,member_id:member_id,price:price}, function(data,textStatus){
+      var extension_id = '{$extension_id}';
+      $.post('/Bar/Goods/buy',{extension_id:extension_id, use_recharge:use_recharge,cash:cash,netbank:netbank,network:network,pos:pos,check:check,check_num:check_num,description:description,goods:goods,member_id:member_id,price:price}, function(data,textStatus){
              if(data.status){ 
                     bootbox.alert(data.info,null); 
-                    window.location.href = data.url;
+                  
                 } else {
                     bootbox.alert(data.info);                   
                 }
