--- a/Yoga/Brand/View/Employee_showAdd.html
+++ b/Yoga/Brand/View/Employee_showAdd.html
@@ -225,6 +225,17 @@
 						 
 					</div>
 				</div>
+
+				<div class="form-group">
+					<label class="col-sm-1 control-label no-padding-right" for="roles"></label>
+					<div class="col-sm-11">   
+							  	<label class="checkbox-inline">
+						  <input type="checkbox" name="can_grant" id="can_grant" value="1"  <?php if  ($employee['can_grant'])
+								  { echo 'checked="true"';}?> >授权超低价卡权限
+							</label> 
+						 
+					</div>
+				</div>
 				 
 
 
