--- a/Yoga/Cashier/View/Contract_continue.html
+++ b/Yoga/Cashier/View/Contract_continue.html
@@ -228,10 +228,10 @@
  
 
                         <div class="form-group red">
-                                <label class="control-label col-xs-12 col-sm-3 no-padding-right" for="extra" >手续费:</label>
+                                <label class="control-label col-xs-12 col-sm-3 no-padding-right" for="extra" >续会费:</label>
 
                                 <div class="col-xs-12 col-sm-9">
-                                    <input type="text" class=" col-xs-12 col-sm-6 red"  id="extra" readonly = "readonly" value="￥{$extra}（需单独付款）"></div>
+                                    <input type="text" class=" col-xs-12 col-sm-6 red"  id="extra" readonly = "readonly" value="￥{$extra}（需单独付费）"></div>
 
                             </div>
 
@@ -276,6 +276,13 @@
                             <div class="col-xs-12 col-sm-9">
                                 <input value="0" class="form-control col-xs-12 col-sm-6" type="text" name="netbank" id="netbank"></div>
                         </div>
+
+                         <div class="form-group">
+                            <label for="contract_number" class="control-label col-xs-12 col-sm-3 no-padding-right">合同号</label>
+                            <div class="col-xs-12 col-sm-9">
+                                <input value="" class="form-control col-xs-12 col-sm-6" type="text" name="contract_number" id="contract_number"></div>
+                        </div>
+     
 
 
                         <div class="form-group">
@@ -388,7 +395,7 @@
                         // year += Math.floor(month/12);
                         // month=month%12;  
                         // $("#end_time").val(year+"-"+padLeft(month,2)+"-"+day);
-                        $("#should_pay").val(parseInt(saletypes[i].price)+extra);
+                        $("#should_pay").val(parseInt(saletypes[i].price));
                         current_card_type=saletypes[i];
                          calEndTime();
                         return;
