--- a/Yoga/Mcmanager/View/Plannew_index.html
+++ b/Yoga/Mcmanager/View/Plannew_index.html
@@ -65,7 +65,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<volist name="statistics" id="st">
+		<!-- 	<volist name="statistics" id="st">
 				<tr  class="info" >
 					<td colspan="6" align="center">{$st.time}</td>
 				</tr>
@@ -95,7 +95,7 @@
 				</tr>
 
 			</volist>
-
+ -->
 		</tbody>
 	</table>
 
@@ -117,7 +117,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<volist name="statistics" id="st">
+			<!-- <volist name="statistics" id="st">
 				<tr  class="info" >
 					<td colspan="6" align="center">{$st.time}</td>
 				</tr>
@@ -146,7 +146,7 @@
 					<td>{$st.br_total}</td>
 				</tr>
 
-			</volist>
+			</volist> -->
 
 		</tbody>
 	</table>
@@ -166,7 +166,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<volist name="statistics" id="st">
+			<!-- <volist name="statistics" id="st">
 				<tr  class="info" >
 					<td colspan="6" align="center">{$st.time}</td>
 				</tr>
@@ -195,7 +195,7 @@
 					<td>{$st.br_total}</td>
 				</tr>
 
-			</volist>
+			</volist> -->
 
 		</tbody>
 	</table>
