--- a/Yoga/Cashier/View/Contract_transform.html
+++ b/Yoga/Cashier/View/Contract_transform.html
@@ -103,16 +103,21 @@
 
     <if condition="0 eq $contract['free_trans']">
 
-       <h4 class="red"> <i class="icon-hand-right icon-animated-hand-pointer blue"></i>
-        转让后单独收取转让费￥{$extra}元
-        </h4>
+        
 
-       <!--  <div class="panel panel-default">
+        <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">转让费(￥{$extra})</h3>
+                <h3 class="panel-title">转让费建议价格(￥{$extra})</h3>
             </div>
             <div class="panel-body">
             <form class="form-horizontal" id="transform_pay_form">
+              <div class="form-group">
+              <label for="should_pay" class="control-label col-xs-12 col-sm-3 no-padding-right">应收</label>
+              <div class="col-xs-12 col-sm-9">
+                <input class="col-xs-12 col-sm-6" type="text" name="should_pay" id="should_pay" value="0"></div>
+            </div>
+
+
                  <div class="form-group">
               <label for="cash" class="control-label col-xs-12 col-sm-3 no-padding-right">现金</label>
               <div class="col-xs-12 col-sm-9">
@@ -145,6 +150,11 @@
                             <div class="col-xs-12 col-sm-9">
                                 <input value="0"  class="col-xs-12 col-sm-6" type="text" name="netbank" id="netbank"></div>
                         </div>
+                        <div class="form-group">
+                            <label for="contract_number" class="control-label col-xs-12 col-sm-3 no-padding-right">合同号</label>
+                            <div class="col-xs-12 col-sm-9">
+                                <input value="0"  class="col-xs-12 col-sm-6" type="text" name="contract_number" id="contract_number"></div>
+                        </div>
             <div class="form-group">
               <label class="control-label col-xs-12 col-sm-3 no-padding-right" for="description" >备注:</label>
               <div class="col-xs-12 col-sm-9">
@@ -154,7 +164,7 @@
         </form>
             </div>
 
-        </div> -->
+        </div>
 
     <else/>
         <h4 class="red"> <i class="icon-hand-right icon-animated-hand-pointer blue"></i>
