--- a/Yoga/Mcmanager/View/Member_notmember.html
+++ b/Yoga/Mcmanager/View/Member_notmember.html
@@ -256,7 +256,7 @@ $("#create_time").change(function(){
                            return value.name_cn;
             },},
 
-                        {name:'create_time',index:'create_time',hidden:true,editable: false , width:100,editable: true,sorttype:'date', editrules:{date:true},formatter:'datetime', datefmt:'Y-m-d H:i:s',},   
+                        {name:'create_time',index:'create_time',hidden:false,editable: false , width:100,editable: true,sorttype:'date', editrules:{date:true},formatter:'datetime', datefmt:'Y-m-d H:i:s',},   
                     ],       
                    
                     pager : pager_selector,
